--- a/Festival-App/Festival-App/Legacy/Platform/Storyboards/Base.lproj/LaunchScreen.storyboard
+++ b/Festival-App/Festival-App/Legacy/Platform/Storyboards/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,28 +17,7 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ultraLogoWhite" translatesAutoresizingMaskIntoConstraints="NO" id="kWw-OY-5MR">
-                                <rect key="frame" x="67" y="127" width="240" height="204"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="9lC-p0-3AI"/>
-                                </constraints>
-                            </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ultraTextWhite" translatesAutoresizingMaskIntoConstraints="NO" id="wH0-O1-vR4">
-                                <rect key="frame" x="67" y="339" width="240" height="106"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="106" id="A7g-1F-dwT"/>
-                                </constraints>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.1529411765" blue="0.21176470589999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="wH0-O1-vR4" firstAttribute="top" secondItem="kWw-OY-5MR" secondAttribute="bottom" constant="8" id="0fr-i3-0oZ"/>
-                            <constraint firstItem="wH0-O1-vR4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="IsE-4c-fJX"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wH0-O1-vR4" secondAttribute="trailing" constant="68" id="X81-Hp-6N9"/>
-                            <constraint firstItem="kWw-OY-5MR" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="cUS-Uv-Kob"/>
-                            <constraint firstItem="kWw-OY-5MR" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="127" id="ta5-DV-TkC"/>
-                        </constraints>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -47,8 +26,4 @@
             <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="ultraLogoWhite" width="205" height="204"/>
-        <image name="ultraTextWhite" width="700" height="181"/>
-    </resources>
 </document>
