--- a/Festival-App/Festival-App/InternshipLobby/Company/Company.storyboard
+++ b/Festival-App/Festival-App/InternshipLobby/Company/Company.storyboard
@@ -1,7 +1,67 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Pending Applications-->
+        <scene sceneID="ZEp-fR-uou">
+            <objects>
+                <viewController storyboardIdentifier="CMainViewController" id="91e-GL-cz8" customClass="CMainViewController" customModule="Festival_App" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="1cR-em-PJz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="eYx-AO-vCo"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Pending Applications" id="A5E-89-yE1"/>
+                    <connections>
+                        <segue destination="cCY-ZA-9cd" kind="show" identifier="ToCDetailsViewController" id="Igj-zy-aWK"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EZQ-ew-xNm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="815.20000000000005" y="25.637181409295355"/>
+        </scene>
+        <!--Application Details-->
+        <scene sceneID="3sX-uR-JCh">
+            <objects>
+                <viewController storyboardIdentifier="ADetailsViewController" id="cCY-ZA-9cd" customClass="Added" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8QC-hg-ipr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="bnN-d1-coY"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Application Details" id="LTf-vc-zjc"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sqL-eK-l2e" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1668" y="26"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="R99-1c-6UR">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Oft-75-7lZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="GC5-Nq-vNf" customClass="AppNavigationBar" customModule="Festival_App" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="91e-GL-cz8" kind="relationship" relationship="rootViewController" id="3AM-ds-pqz"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="awy-e6-Dzy" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-124" y="25.637181409295355"/>
+        </scene>
+    </scenes>
 </document>
