--- a/Festival-App/Festival-App/InternshipLobby/University/University.storyboard
+++ b/Festival-App/Festival-App/InternshipLobby/University/University.storyboard
@@ -1,7 +1,67 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Pending Results-->
+        <scene sceneID="FuH-fN-inY">
+            <objects>
+                <viewController storyboardIdentifier="UMainViewController" id="9tT-Mt-oih" customClass="UMainViewController" customModule="Festival_App" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="CEh-BM-bgs">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="zhh-2L-XTM"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Pending Results" id="x86-i9-3K3"/>
+                    <connections>
+                        <segue destination="Ifh-9o-Ff3" kind="show" identifier="ToUDetailsViewController" id="BYD-83-OvT"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tB5-68-9aJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="815.20000000000005" y="25.637181409295355"/>
+        </scene>
+        <!--Result Details-->
+        <scene sceneID="7Sf-D9-JVZ">
+            <objects>
+                <viewController storyboardIdentifier="ADetailsViewController" id="Ifh-9o-Ff3" customClass="Added" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="fPa-ie-GNF">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="A8H-eI-1HC"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Result Details" id="Uub-8c-7Ed"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dio-yB-2cX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1668" y="26"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="gSS-IE-V1N">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="HF5-cf-dgO" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="h1T-lr-t6m" customClass="AppNavigationBar" customModule="Festival_App" customModuleProvider="target">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="9tT-Mt-oih" kind="relationship" relationship="rootViewController" id="g29-z6-ocG"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CSJ-FZ-Tvr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-124" y="25.637181409295355"/>
+        </scene>
+    </scenes>
 </document>
