--- a/Festival-App/Festival-App/Legacy/Platform/Storyboards/Base.lproj/Authentication.storyboard
+++ b/Festival-App/Festival-App/Legacy/Platform/Storyboards/Base.lproj/Authentication.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="lew-ya-ZdD">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -49,7 +48,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Login" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u94-jw-xwY">
-                                        <rect key="frame" x="164" y="43.5" width="48" height="26"/>
+                                        <rect key="frame" x="163.5" y="43.5" width="48" height="26"/>
                                         <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="19"/>
                                         <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -85,7 +84,7 @@
                                 <rect key="frame" x="0.0" y="77" width="375" height="590"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="553-C8-gtR">
-                                        <rect key="frame" x="62" y="245" width="250" height="136"/>
+                                        <rect key="frame" x="62.5" y="245" width="250" height="136"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eVs-Tu-CKa">
                                                 <rect key="frame" x="0.0" y="0.0" width="250" height="30"/>
@@ -135,14 +134,14 @@
                                         </connections>
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="lnQ-B7-QXN">
-                                        <rect key="frame" x="99.5" y="40" width="175" height="175"/>
+                                        <rect key="frame" x="100" y="40" width="175" height="175"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="175" id="wCp-JV-whM"/>
                                             <constraint firstAttribute="width" constant="175" id="xDM-xT-thi"/>
                                         </constraints>
                                     </imageView>
                                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2wu-8l-yRr">
-                                        <rect key="frame" x="99.5" y="40" width="175" height="175"/>
+                                        <rect key="frame" x="100" y="40" width="175" height="175"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LZ4-AB-cgf">
                                                 <rect key="frame" x="87.5" y="20" width="0.0" height="0.0"/>
@@ -254,7 +253,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Register" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4F7-8q-EeI">
-                                        <rect key="frame" x="152.5" y="43.5" width="71.5" height="26"/>
+                                        <rect key="frame" x="152" y="43.5" width="71.5" height="26"/>
                                         <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="19"/>
                                         <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -303,7 +302,7 @@
                                 <rect key="frame" x="0.0" y="77" width="375" height="590"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="a7H-Pc-lQm">
-                                        <rect key="frame" x="63" y="231" width="250" height="220"/>
+                                        <rect key="frame" x="62.5" y="231" width="250" height="220"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DYt-cb-T4X">
                                                 <rect key="frame" x="0.0" y="0.0" width="250" height="30"/>
@@ -366,7 +365,7 @@
                                         </subviews>
                                     </stackView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YU3-ir-0bv">
-                                        <rect key="frame" x="99.5" y="26" width="175" height="175"/>
+                                        <rect key="frame" x="100" y="26" width="175" height="175"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="175" id="8vY-gP-l6e"/>
                                             <constraint firstAttribute="height" constant="175" id="KeR-lu-PjI"/>
@@ -449,7 +448,7 @@
                                         <state key="normal" image="menuStack"/>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RW2-w7-plN">
-                                        <rect key="frame" x="162" y="43.5" width="52" height="26"/>
+                                        <rect key="frame" x="161.5" y="43" width="52" height="26"/>
                                         <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="19"/>
                                         <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -500,7 +499,7 @@
                                 <rect key="frame" x="0.0" y="77" width="375" height="590"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ultraLogoWhite" translatesAutoresizingMaskIntoConstraints="NO" id="FL2-UU-14G">
-                                        <rect key="frame" x="67" y="50" width="240" height="204"/>
+                                        <rect key="frame" x="67" y="50" width="240" height="97"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5vx-QD-eR6" customClass="RoundedButton" customModule="Festival_App" customModuleProvider="target">
                                         <rect key="frame" x="65" y="510" width="245" height="50"/>
@@ -522,7 +521,7 @@
                                         </connections>
                                     </button>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ultraTextWhite" translatesAutoresizingMaskIntoConstraints="NO" id="EWL-vb-7Bw">
-                                        <rect key="frame" x="67" y="262" width="240" height="106"/>
+                                        <rect key="frame" x="67" y="155" width="240" height="106"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="106" id="2GQ-Pq-Gqx"/>
                                         </constraints>
@@ -632,7 +631,7 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Win Tickets" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2dB-Xd-7qI">
-                                        <rect key="frame" x="138" y="43.5" width="99.5" height="26"/>
+                                        <rect key="frame" x="138" y="43" width="99.5" height="26"/>
                                         <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="19"/>
                                         <color key="textColor" red="0.95294117649999999" green="0.95294117649999999" blue="0.95294117649999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -963,7 +962,7 @@
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <imageView userInteractionEnabled="NO" alpha="0.69999998807907104" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tWn-8B-U62">
-                                                            <rect key="frame" x="0.0" y="0.0" width="375" height="75.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Option" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kCS-fq-ce6">
                                                             <rect key="frame" x="15" y="18.5" width="90" height="38.5"/>
@@ -1002,7 +1001,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kPV-J1-jag">
-                                        <rect key="frame" x="107" y="591" width="56" height="36"/>
+                                        <rect key="frame" x="107" y="591.5" width="56" height="36"/>
                                         <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="17"/>
                                         <state key="normal" title="Logout">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -1172,16 +1171,16 @@
         </scene>
     </scenes>
     <resources>
-        <image name="backButton" width="25" height="25"/>
-        <image name="cameraPlaceholder" width="256" height="256"/>
-        <image name="chat" width="29" height="25"/>
+        <image name="backButton" width="12" height="12"/>
+        <image name="cameraPlaceholder" width="512" height="512"/>
+        <image name="chat" width="13.920000076293945" height="12"/>
         <image name="menuStack" width="40" height="40"/>
         <image name="profileDefault" width="192" height="192"/>
-        <image name="ultraLogoWhite" width="205" height="204"/>
+        <image name="ultraLogoWhite" width="98.639999389648438" height="97.919998168945312"/>
         <image name="ultraTextWhite" width="700" height="181"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="COe-lv-7BE"/>
-        <segue reference="hgO-G5-ZHv"/>
+        <segue reference="Bb2-sH-5zi"/>
     </inferredMetricsTieBreakers>
 </document>
