Second draft of RE application

--- a/Festival-App/Festival-App/InternshipLobby/Company/Company.storyboard
+++ b/Festival-App/Festival-App/InternshipLobby/Company/Company.storyboard
@@ -32,7 +32,7 @@
         <!--Application Details-->
         <scene sceneID="3sX-uR-JCh">
             <objects>
-                <viewController storyboardIdentifier="ADetailsViewController" id="cCY-ZA-9cd" customClass="Added" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CDetailsViewController" id="cCY-ZA-9cd" customClass="CDetailsViewController" customModule="Festival_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8QC-hg-ipr">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
