--- a/Festival-App/Festival-App/InternshipLobby/University/University.storyboard
+++ b/Festival-App/Festival-App/InternshipLobby/University/University.storyboard
@@ -32,7 +32,7 @@
         <!--Result Details-->
         <scene sceneID="7Sf-D9-JVZ">
             <objects>
-                <viewController storyboardIdentifier="ADetailsViewController" id="Ifh-9o-Ff3" customClass="Added" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="UDetailsViewController" id="Ifh-9o-Ff3" customClass="UDetailsViewController" customModule="Festival_App" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fPa-ie-GNF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
