--- a/Festival-App/Festival-App/InternshipLobby/Company/Company.storyboard
+++ b/Festival-App/Festival-App/InternshipLobby/Company/Company.storyboard
@@ -17,11 +17,65 @@
                     <view key="view" contentMode="scaleToFill" id="1cR-em-PJz">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0tn-tp-U9u">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CPendingOfferTableViewCell" rowHeight="100" id="dvM-p0-Uyr" customClass="CPendingOfferTableViewCell" customModule="Festival_App" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="100"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dvM-p0-Uyr" id="LyI-J1-PwH">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="q5X-uU-iXk">
+                                                    <rect key="frame" x="15" y="10.5" width="80" height="80"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="80" id="3es-gc-qYm"/>
+                                                        <constraint firstAttribute="height" constant="80" id="jq1-zq-n8s"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Offer Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g3g-4o-7sN">
+                                                    <rect key="frame" x="110" y="40" width="235" height="21"/>
+                                                    <fontDescription key="fontDescription" name="Avenir-Medium" family="Avenir" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="g3g-4o-7sN" firstAttribute="centerY" secondItem="q5X-uU-iXk" secondAttribute="centerY" id="HhB-48-Y6v"/>
+                                                <constraint firstItem="q5X-uU-iXk" firstAttribute="top" secondItem="LyI-J1-PwH" secondAttribute="top" constant="10" id="Khi-DH-R6f"/>
+                                                <constraint firstAttribute="bottom" secondItem="q5X-uU-iXk" secondAttribute="bottom" constant="10" id="Qtq-Nj-Au8"/>
+                                                <constraint firstItem="g3g-4o-7sN" firstAttribute="leading" secondItem="q5X-uU-iXk" secondAttribute="trailing" constant="15" id="aq0-lM-hmW"/>
+                                                <constraint firstItem="q5X-uU-iXk" firstAttribute="leading" secondItem="LyI-J1-PwH" secondAttribute="leading" constant="15" id="jPG-09-EU4"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="g3g-4o-7sN" secondAttribute="trailing" constant="15" id="u9x-RR-2Aj"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="applicantImageView" destination="q5X-uU-iXk" id="mxu-KV-FEY"/>
+                                            <outlet property="offerTitleLabel" destination="g3g-4o-7sN" id="QeB-S5-0SB"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="91e-GL-cz8" id="PpG-Cf-Dx4"/>
+                                    <outlet property="delegate" destination="91e-GL-cz8" id="5hX-SF-gRg"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="0tn-tp-U9u" firstAttribute="top" secondItem="eYx-AO-vCo" secondAttribute="top" id="BdV-0l-XNr"/>
+                            <constraint firstItem="0tn-tp-U9u" firstAttribute="leading" secondItem="eYx-AO-vCo" secondAttribute="leading" id="VL2-wx-cW9"/>
+                            <constraint firstItem="0tn-tp-U9u" firstAttribute="trailing" secondItem="eYx-AO-vCo" secondAttribute="trailing" id="lHd-F6-t9o"/>
+                            <constraint firstItem="0tn-tp-U9u" firstAttribute="bottom" secondItem="eYx-AO-vCo" secondAttribute="bottom" id="wZv-99-DHX"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="eYx-AO-vCo"/>
                     </view>
                     <navigationItem key="navigationItem" title="Pending Applications" id="A5E-89-yE1"/>
                     <connections>
+                        <outlet property="tableView" destination="0tn-tp-U9u" id="cGi-uU-rpG"/>
                         <segue destination="cCY-ZA-9cd" kind="show" identifier="ToCDetailsViewController" id="Igj-zy-aWK"/>
                     </connections>
                 </viewController>
